# nauchnayanacpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: main.yml
gui/: form.css  form.js  form.pug  package-lock.json  package.json  server.js
kursovayanacpp/: kursovayanacpp.sln
kursovayanacpp/Debug/: kursovayanacpp.ilk
kursovayanacpp/Release/: kursovayanacpp.iobj  kursovayanacpp.ipdb
kursovayanacpp/kursovayanacpp/: Source.cpp  kursovayanacpp.vcxproj  kursovayanacpp.vcxproj.filters  results.csv
kursovayanacpp/kursovayanacpp/Debug/: vc141.idb
kursovayanacpp/kursovayanacpp/Debug/kursovayanacpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  kursovayanacpp.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
kursovayanacpp/kursovayanacpp/Release/kursovayanacpp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  kursovayanacpp.lastbuildstate  kursovayanacpp.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
scripts/: bc.bat  bc.sh
source/: source.cpp
