cmake_minimum_required(VERSION 3.1)

project("nauchnayanacpp")

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/bin")

set(MAIN_TARGET "application")
file(GLOB_RECURSE MAIN_TARGET_SOURCE  "${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp")
file(GLOB_RECURSE MAIN_TARGET_HEADERS "${CMAKE_CURRENT_SOURCE_DIR}/source/*.hpp")

add_executable(${MAIN_TARGET} ${MAIN_TARGET_SOURCE} ${MAIN_TARGET_HEADERS})